--- a/ClassDBScratch.csproj
+++ b/ClassDBScratch.csproj
@@ -66,7 +66,7 @@
   <ItemGroup>
     <Content Include="index.html" />
     <Content Include="ui_prototype.html" />
-    <Content Include="unitTests.js" />
+    <TypeScriptCompile Include="unitTests.ts" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
